defining routes
routes updates and openAPI spec
